packages/beynac/src/test-utils/source/__fixtures__/errors/bad-reexport.ts
// Non-entry-point file that re-exports (not allowed)
export { ParentExport } from "./parent-export.ts";
